--- a/project-plan/references.bib
+++ b/project-plan/references.bib
@@ -8,19 +8,19 @@
     antonopoulos:mastering:bitcoin,
     author = {Antonopoulos, Andreas},   
     title = {Mastering Bitcoin},
-    publisher = {O'Reilly Media\\},
+    publisher = {O'Reilly Media},
     month = {July},
-    year = {2014\\},
+    year = {2014},
     edition = {first},
     note = { }
 }
 
 @article{
     nakamoto:bitcoin,
-    author = { Lane\\, Charles},
-    title = { Bitcoin: A Peer-to-Peer Electronic Cash System\\ },
+    author = { Nakamoto, Satoshi},
+    title = { Bitcoin: A Peer-to-Peer Electronic Cash System },
     
-    howpublished = { https://bitcoin.org/bitcoin.pdf \\},
+    howpublished = { https://bitcoin.org/bitcoin.pdf },
     issue_date = {31 october 2008},
 }
 
@@ -33,14 +33,30 @@
     issue_date = {a August 2002},
 }
 
-
 @misc{repository:bitcoin,
     author = {},
     title = {bitcoin reference implementation},
-    howpublished = {\\
+    howpublished = {
     \url{https://github.com/bitcoin/bitcoin}},
-    note = {\\(Accessed on 06/11/2018)\\},
+    note = {},
 }
+
+@misc{repository:neutrino,
+	author = {},
+	title = {Light weight bitcoin client},
+	howpublished = {
+	\url{https://github.com/lightninglabs/neutrino}},
+	note = {},
+}
+
+@misc{repository:btcd,
+	author = {},
+	title = {fullt node bitcoin implementation},
+	howpublished = {\\
+	\url{https://github.com/btcsuite/btcd}},
+	note = {},
+}
+
 
 % Bitcoin - Bips
 
@@ -60,6 +76,14 @@ howpublished = {\\
 note = {\\(Accessed on 06/11/2018)\\},
 }
 
+@misc{bip,
+	author = {},
+	title = {Bitcoin improvement proposals },
+	howpublished = {
+	\url{https://github.com/bitcoin/bips}},
+	note = {},
+}
+
 % Satoshi forum posts
 https://bitcointalk.org/index.php?action=profile;u=3;sa=showPosts;start=520
 
@@ -67,29 +91,61 @@ https://bitcointalk.org/index.php?action=profile;u=3;sa=showPosts;start=520
 https://bitcointalk.org/index.php?topic=13.msg46#msg46
 
 TOR, reverse govern-print mention
-
-
     
-    
-    
-
-
-
-
 
 % Lightning 
 
 
 @misc{Poon:Dryja:lightning:network,
-title = {The Bitcoin Lightning Network:
-Scalable Off-Chain Instant Payments\\},
-author = {Poon, Joseph; Dryja\\, Thaddeus},
-howpublished = { \url{https://lightning.network/lightning-network-paper.pdf} \\},
+title = {The Bitcoin Lightning Network: Scalable Off-Chain Instant Payments},
+author = {Poon, Joseph; Dryja, Thaddeus},
+howpublished = { \url{https://lightning.network/lightning-network-paper.pdf} },
 issue_date = {14 january 2016 DRAFT Version 0.5.9.2},
 }
 
 
+@misc{repository:lightning:rfc,
+	author = {},
+	title = {Lightning specification, Request for comments},
+	howpublished = {\\
+	\url{https://github.com/lightningnetwork/lightning-rfc}},
+	note = {},
+}
 
+@misc{repository:lnd,
+	author = {},
+	title = {Lightning node daemon},
+	howpublished = {
+	\url{https://github.com/lightningnetwork/lnd}},
+	note = {},
+}
+
+@misc{repository:clightning,
+	author = {},
+	title = {Lightning node c-lightning developed by Blockstream},
+	howpublished = {
+	\url{https://github.com/ElementsProject/lightning}},
+	note = {},
+}
+
+@misc{repository:eclair,
+	author = {},
+	title = {Lightning node eclair developed by Acinq},
+	howpublished = {
+	\url{https://github.com/ACINQ/eclair}},
+	note = {},
+}
+
+
+% My repositories
+
+@misc{repository:me:thesis,
+	author = {},
+	title = {Thesis source repository},
+	howpublished = {
+	\url{https://github.com/Johnstedt/master-thesis-ln-fee-estimation}},
+	note = {},
+}
 
 
 
