messing with go, secure tunneling to full node host works, moved docs to separate folder

--- a/docs/project-plan/main.tex
+++ b/docs/project-plan/main.tex
@@ -119,7 +119,7 @@
 				\begin{tabular}{ll}
                 	\textbf{Name} & \name \\
 					\textbf{Cinnober Supervisor} & Oskar Janson\\
-					\textbf{University Supervisor} & ?\\
+					\textbf{University Supervisor} & Jerry Eriksson\\
 					\textbf{Examinator} & Henrik Björklund\\
 				\end{tabular}
 			\vfill
@@ -156,7 +156,7 @@
 
 This is the project plan for the master thesis of Routing Fee Estimation in the Lightning Network. Some parts are directly taken from the project specification to make it a self contained document.
 
-\section{Background}
+\subsection{Background}
 
 Although still very much in its early stages, blockchain and distributed ledger
 solutions are said to be able to transform the current financial infrastructure,
@@ -246,6 +246,8 @@ The original bitcoin\cite{nakamoto:bitcoin} and lightning\cite{Poon:Dryja:lightn
 
 The bitcoin reference implementation\cite{repository:bitcoin}, along with other node implementations\cite{repository:neutrino}\cite{repository:btcd} as well as lightning specification\cite{repository:lightning:rfc} and implementations\cite{repository:lnd}\cite{repository:clightning}\cite{repository:eclair} will be studied and used during the project.
 
+
+
 \section{Communication}
 
 In this section the various aspects of communication during the project is discussed.
@@ -259,6 +261,11 @@ A report in the form of a markdown document will be written each week and be ava
 All the project's resources will be available through a git repository\cite{repository:me:thesis}. There the project's progression can be observed. Git is a version control system, this will provide an extensive history over the project. Every type of resource will be made available through git including text, images and source code. 
 
 \subsection{Meetings}
+
+As the thesis will be written from the Cinnober office, meetings with the Cinnober supervisor Oskar Janson can easily be had when needed.
+
+<Some plan with Jerry>
+
 
 \section{Time plan}
 
