--- a/docs/project-plan/references.bib
+++ b/docs/project-plan/references.bib
@@ -43,7 +43,7 @@
 
 @misc{repository:neutrino,
 	author = {},
-	title = {Light weight bitcoin client},
+	title = {Light weight bitcoin node implementation},
 	howpublished = {
 	\url{https://github.com/lightninglabs/neutrino}},
 	note = {},
@@ -51,7 +51,7 @@
 
 @misc{repository:btcd,
 	author = {},
-	title = {fullt node bitcoin implementation},
+	title = {btcd: a full node bitcoin implementation},
 	howpublished = {\\
 	\url{https://github.com/btcsuite/btcd}},
 	note = {},
@@ -92,9 +92,7 @@ https://bitcointalk.org/index.php?topic=13.msg46#msg46
 
 TOR, reverse govern-print mention
     
-
 % Lightning 
-
 
 @misc{Poon:Dryja:lightning:network,
 title = {The Bitcoin Lightning Network: Scalable Off-Chain Instant Payments},
@@ -102,7 +100,6 @@ author = {Poon, Joseph; Dryja, Thaddeus},
 howpublished = { \url{https://lightning.network/lightning-network-paper.pdf} },
 issue_date = {14 january 2016 DRAFT Version 0.5.9.2},
 }
-
 
 @misc{repository:lightning:rfc,
 	author = {},
@@ -135,7 +132,6 @@ issue_date = {14 january 2016 DRAFT Version 0.5.9.2},
 	\url{https://github.com/ACINQ/eclair}},
 	note = {},
 }
-
 
 % My repositories
 
