--- a/docs/project-plan/references.bib
+++ b/docs/project-plan/references.bib
@@ -3,7 +3,6 @@
 
 % Bitcoin
 
-
 @book{
     antonopoulos:mastering:bitcoin,
     author = {Antonopoulos, Andreas},   
@@ -35,7 +34,7 @@
 
 @misc{repository:bitcoin,
     author = {},
-    title = {bitcoin reference implementation},
+    title = {Bitcoin Reference Implementation},
     howpublished = {
     \url{https://github.com/bitcoin/bitcoin}},
     note = {},
@@ -43,7 +42,7 @@
 
 @misc{repository:neutrino,
 	author = {},
-	title = {Light weight bitcoin node implementation},
+	title = {Light weight Bitcoin node implementation},
 	howpublished = {
 	\url{https://github.com/lightninglabs/neutrino}},
 	note = {},
@@ -51,7 +50,7 @@
 
 @misc{repository:btcd,
 	author = {},
-	title = {btcd: a full node bitcoin implementation},
+	title = {btcd: a full node Bitcoin implementation},
 	howpublished = {\\
 	\url{https://github.com/btcsuite/btcd}},
 	note = {},
@@ -94,7 +93,7 @@ TOR, reverse govern-print mention
     
 % Lightning 
 
-@misc{Poon:Dryja:lightning:network,
+@misc{poon:dryja:lightning:network,
 title = {The Bitcoin Lightning Network: Scalable Off-Chain Instant Payments},
 author = {Poon, Joseph; Dryja, Thaddeus},
 howpublished = { \url{https://lightning.network/lightning-network-paper.pdf} },
@@ -144,8 +143,29 @@ issue_date = {14 january 2016 DRAFT Version 0.5.9.2},
 }
 
 
+% 
 
+@book{
+	hespanha:noncooperative:game:theory,
+	author = {Hespanha, João P.},   
+	title = {Noncooperative Game Theory},
+	publisher = {Princeton University Press, 41 William Street, Princton, New Jersey},
+	month = {},
+	year = {2017},
+	edition = {first},
+	note = { }
+}
 
+@book{
+	lasaulce:tembine:game:theory:and:learning:for:wireless:networks,
+	author = {Lasaulce, Samson; Tembine, Hamidou},   
+	title = {Game Theory and Learning for Wireless Networks},
+	publisher = {Academic Press, The boulivard, Langford Lane, Kidlington, Oxford, OX5 1GB},
+	month = {},
+	year = {2011},
+	edition = {first},
+	note = { }
+}
 
 
 
