thesis struct and raw cmd

--- a/docs/contents.tex
+++ b/docs/contents.tex
@@ -1,18 +1,26 @@
-\section{Problem description}
+\section{Problem Description}
     \label{sec:problem}
     \input{problem}
 
-\section{Theory}
-    \label{sec:theory}
-%    \input{theory}
+\newpage
 
-\section{Experiments}
+\section{Trustful systems and Macroeconomics}
+    \label{sec:macroeconomics}
+    \input{macroeconomics}
+
+\section{The Bitcoin Network}
     \label{sec:experiments}
   %  \input{experiments}
 
-\section{Results}
+\section{Scaling Bitcoin}
     \label{sec:results}
 %    \input{results}
+
+\section{Lightning Network}
+
+\section{Evaluation}
+
+\section{Results}
 
 \section{Discussion}
     \label{sec:discussion}
