--- a/docs/problem.tex
+++ b/docs/problem.tex
@@ -5,15 +5,15 @@
 \subsection{Aim}
     \label{sec:aim}
 
-    This report aims to address three questions:
+This thesis aim to address following three questions:
 
     \begin{enumerate}
-        \item What effect does the uneven IP distribution have on
-            the pre-calibration?
-        \item Does assigning equal weights to equal sensor areas
-            during the calibration yield a better calibration?
-        \item Do the answers to these questions depend on whether
-            the calibration object is planar?
+	\item What is the fair discount for a transaction that balances the channel, as
+		opposed to an unbalancing one?
+	\item When should a new channel be opened, and what node should the new
+		channel connect to in order to incentivize routing through the node?
+	\item When should a manual rebalancing of the channels occur, as opposed to
+		incentivized rebalancing using discounts?
     \end{enumerate}
 
 \subsection{Related work}
