--- a/docs/contents.tex
+++ b/docs/contents.tex
@@ -3,14 +3,13 @@
     \input{problem}
 
 \newpage
-
 \section{Trustful systems and Macroeconomics}
     \label{sec:macroeconomics}
-    \input{macroeconomics}
-
+   \input{macroeconomics}
+\newpage
 \section{The Bitcoin Network}
-    \label{sec:experiments}
-  %  \input{experiments}
+    \label{sec:bitcoin}
+    \input{bitcoin}
 
 \section{Scaling Bitcoin}
     \label{sec:results}
