--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,5 +1,74 @@
-
 % Macroeconomy
+
+@misc{repository:bitcoin:sourceforge,
+	author = {},
+	title = {Original bitcoin repository with the genisis block function},
+	howpublished = {
+		\url{https://sourceforge.net/p/bitcoin/code/133/tree/trunk/main.cpp#l1673}},
+	note = {The source forge repostiory was later moved to github.},
+}
+
+@misc{bitcoin:genesis:coinbase,
+	author = {},
+	title = {The coinbase transaction of the genesis block.},
+	howpublished = {
+		\url{https://www.blockchain.com/btc/tx/4a5e1e4baab89f3a32518a88c31bc87f618f76673e2cc77ab2127b7afdeda33b?show_adv=true}},
+	note = {The source forge repostiory was later moved to github.},
+}
+
+
+@book{
+	crown:gold,
+	author = { Linder, Nils },   
+	title = { Nordisk Familjebok},
+	publisher = { C. E. Gernandt },
+	year = {1911},
+	edition = {second},
+	note = { }
+}
+
+@book{
+	nordic:crown,
+	author = { Linder, Nils },   
+	title = { Nordisk Familjebok},
+	publisher = { C. E. Gernandt },
+	year = {1913},
+	edition = {second},
+	note = { }
+}
+
+@article{
+	szabo:shelling:out,
+	author = {Szabo, Nick},   
+	title = {Shelling out},
+	publisher = {},
+	year = {2002},
+	volume = {2}
+	year = 1892
+	howpublished = {\url{https://nakamotoinstitute.org/shelling-out/}}
+	pages = {239-55}
+}
+
+
+
+@article{
+	menger:origins:money,
+	author = {Menger, Carl},   
+	title = {On the Origins of Money},
+	publisher = {O'Reilly Media},
+	month = {July},
+	year = {2014},
+	edition = {first},
+	note = { },
+	journal =  Economic Journal,
+	volume = {2}
+	year = 1892
+	howpublished = {\url{http://www.socsci.mcmaster.ca/~econ/ugcm/3ll3/menger/money.txt}}
+	pages = {239-55}
+}
+
+
+andra upplagan, 1911
 
 % Bitcoin
 
@@ -55,7 +124,6 @@
 	\url{https://github.com/btcsuite/btcd}},
 	note = {},
 }
-
 
 % Bitcoin - Bips
 
@@ -132,6 +200,14 @@ TOR, reverse govern-print mention
 	note = {},
 }
 
+@misc{repository:lit,
+author = {},
+title = {Lightning node lit developed under MIT Digital Currency Initative},
+howpublished = {
+	\url{https://github.com/mit-dci/lit}},
+note = {},
+}
+
 % My repositories
 
 @misc{repository:me:thesis,
@@ -142,8 +218,7 @@ TOR, reverse govern-print mention
 	note = {},
 }
 
-
-% 
+% Game Theory 
 
 @book{
 	hespanha:noncooperative:game:theory,
@@ -168,13 +243,38 @@ TOR, reverse govern-print mention
 }
 
 
-@book{atkinson_close_range_pgm_and_mv,
-	Author = {K. B. Atkinson},
-	Title = {Close Range Photogrammetry and Machine Vision},
-	Publisher = {Whittles Publishing},
-	Year = {2001},
-	ISBN = {1-870325-73-7},
+@article{singh:dwivedi:strivastava:energy:consumption:mining,
+	author =   {Singh, Rajani; Dhar Dwivedi1, Ashutosh; Srivastava, Gautam },
+	title =    {Energy consumption in Bitcoin Mining: A Game
+	Theoretic Analysis},
+	year =     2018,
+	journal = {
+	
+		Institute of Computer Science, Polish Academy of Sciences, Warsaw, Poland;
+		Faculty of Mathematics, Informatics, and Mechanics, University of Warsaw, Warsaw, Poland;
+		Research Center for Interneural Computing, China Medical University, Taichung, Taiwan, China;
+		Department of Mathematics and Computer Science, Brandon University, Brandon, Manitoba,
+		Canada },
+	keywords =     {
+		Bitcoin Mining, Dynamic Game Theory, Hamilton-Jacobi-Bellman Equation,
+		Social optimum, Nash equilibrium, Pigovian Tax},
+
+	howpublished = {
+	\url{https://eprint.iacr.org/2018/780.pdf}},
+haveit =   {pdf}
 }
+
+@Article{niu:feng:selfish:mining:ethereum,
+	author =   { Niu, Jianyu; Feng, Chen },
+	title =    {Selfish Mining in Ethereum},
+	year =     2018,
+	journal = { School of Engineering, University of British Columbia (Okanagan Campus), Canada },
+	
+	howpublished = {
+		\url{https://arxiv.org/pdf/1901.04620.pdf}},
+	haveit =   {pdf}
+}
+
 
 @Article(Borlin2013:Bundle,
 seqno =    817,
@@ -241,18 +341,4 @@ haveit =   {pdf}
 	even today, research and commercial applications
 	.},
 	haveit = "pdf"
-}
-
-@article{Brostrm2004,
-	doi = {10.1111/j.1651-2227.2004.tb02688.x},
-	url = {https://doi.org/10.1111%2Fj.1651-2227.2004.tb02688.x},
-	year  = {2004},
-	month = {jul},
-	publisher = {Wiley-Blackwell},
-	volume = {93},
-	number = {7},
-	pages = {906--910},
-	author = {E Brostr\"{o}m and S Hagelberg and Y Haglund-{\AA}kerlind},
-	title = {Effect of joint injections in children with juvenile idiopathic arthritis: evaluation by 3D-gait analysis},
-	journal = {Acta Paediatrica}
 }
